разделение на комоненты, добавление ф-нала в таблицы

--- a/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/button-control/button-control.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/button-control/button-control.component.html
@@ -4,6 +4,6 @@
   [attr.data-bs-toggle]="modalToggle ? 'modal' : null"
   [attr.data-bs-target]="modalTarget"
   [disabled]="isDisabled"
-  (click)="onClick()">
+  (click)="buttonText === 'Редактировать' ? (incomeApi ? prepareIncomeEdit() : prepareExpenseEdit()) : onClick()">
   {{ buttonText }}
 </button>
