--- a/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/form-field/form-field.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/form-field/form-field.component.html
@@ -2,7 +2,7 @@
   <legend class="formLegend bg-white w-auto position-absolute">{{ label }}</legend>
   <input 
     [type]="type" 
-    class="border-0 bg-transparent w-100 fs-7" 
+    class="border-0 bg-transparent w-100 fs-7 no-outline" 
     [name]="name" 
     [value]="model"
     (input)="onModelChange($event)"
