--- a/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/financeTransactions.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/financeTransactions.component.html
@@ -1,8 +1,8 @@
 <button class="mt-4 mb-4 border border-2 border-dark rounded d-flex justify-content-center w-auto mx-auto p-2" [routerLink]="['/finance/analyticsCharts']">Переключиться</button>
 <div class="tablePartHTML">
   <div class="gridColumns d-grid mt-2 mb-2">
-    <app-column-title title="Доходы"></app-column-title>
-    <app-column-title title="Расходы"></app-column-title>
+    <p class="d-flex justify-content-center fw-bold fs-1">Доходы</p>
+    <p class="d-flex justify-content-center fw-bold fs-1">Расходы</p>
   </div>
   <div class="d-grid gridColumns mt-2 mb-2">
     <div class="d-flex gap-3 m-3 justify-content-center">
@@ -18,13 +18,15 @@
         buttonClass="btn-primary"
         modalTarget="#addIncomeModal"
         [modalToggle]="true"
-        [isDisabled]="true"
-        id="editIncomeButton"
-        (buttonClick)="prepareIncomeEdit()">
+        [isDisabled]="isIncomeEditDisabled"
+        #editIncomeButton
+        [incomeApi]="incomeApi"
+        (editData)="prepareIncomeEdit($event)">
       </app-button-control>
       <app-button-control 
         buttonText="Удалить"
         buttonClass="btn-danger"
+        [incomeApi]="incomeApi"
         (buttonClick)="incomeDeleteButton()">
       </app-button-control>
     </div>
@@ -41,13 +43,15 @@
         buttonClass="btn-primary"
         modalTarget="#addIncomeModal"
         [modalToggle]="true"
-        [isDisabled]="true"
-        id="editExpenseButton"
-        (buttonClick)="prepareExpenseEdit()">
+        [isDisabled]="isExpenseEditDisabled"
+        #editExpenseButton
+        [expensApi]="expensApi"
+        (editData)="prepareExpenseEdit($event)">
       </app-button-control>
       <app-button-control 
         buttonText="Удалить"
         buttonClass="btn-danger"
+        [expensApi]="expensApi"
         (buttonClick)="expenseDeleteButton()">
       </app-button-control>
     </div>
@@ -56,7 +60,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="mb-2 d-flex justify-content-between mt-3 ms-3 me-3">
-          <h1 class="modal-title fs-4" id="incomeModalTittle">Добавление дохода</h1>
+          <h1 class="modal-title fs-4" id="incomeModalTittle">{{ modalTitle }}</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
         </div>
         <div class="modal-body">
@@ -65,18 +69,21 @@
               label="Категория" 
               type="text" 
               name="category" 
+              #inputCategory
               [(model)]="category">
             </app-form-field>
             <app-form-field 
               label="Сумма" 
               type="number" 
               name="sum" 
+              #inputSum
               [(model)]="sum">
             </app-form-field>
             <app-form-field 
               label="Дата" 
               type="date" 
               name="date" 
+              #inputDate
               [(model)]="date">
             </app-form-field>
           </form>
@@ -89,7 +96,7 @@
     </div>
   </div>
   <div class="gridColumns w-60 mx-auto d-grid gap-5" style="max-width: 1200px;">
-    <div class="ag-theme-alpine" #incomeGrid style="height: 500px; width: 100%; max-width: 600px; margin: 0 auto;"></div>
-    <div class="ag-theme-alpine" #expenseGrid style="height: 500px; width: 100%; max-width: 600px; margin: 0 auto;"></div>
+    <app-table [gridId]="'incomeGrid'" [(isEditButtonDisabled)]="isIncomeEditDisabled" (apiReady)="incomeApi = $event"></app-table>
+    <app-table [gridId]="'expenseGrid'" [(isEditButtonDisabled)]="isExpenseEditDisabled" (apiReady)="expensApi = $event"></app-table>
   </div>
 </div>
