--- a/Тестовые задания/AngularTableGrafic/src/app/finance/analyticsCharts/analyticsCharts.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/analyticsCharts/analyticsCharts.component.html
@@ -1,9 +1,7 @@
-<button class="mt-4 mb-4 border border-2 border-dark rounded d-flex justify-content-center w-auto mx-auto p-2" [routerLink]="['/finance/financeTransactions']">Переключиться</button>
 <div class="graficPartHTML" >
   <h1 class="d-flex justify-content-center mt-5 mb-2">Графики</h1>
-  <app-data-selector (financeComparisonDateRangeChange)="onFinanceComparisonDateRangeChange($event)" (incomeDateRangeChange)="onIncomeDateRangeChange($event)"></app-data-selector>
-</div>
-<div class="d-flex justify-content-around mb-5">
-  <app-income-chart [dateRange]="incomeDateRange"></app-income-chart>
-  <app-finance-comparison-chart [dateRange]="financeComparisonDateRange"></app-finance-comparison-chart>
+  <div class="d-flex justify-content-around mb-5">
+    <app-chart-container-with-date-selector chartType="income"></app-chart-container-with-date-selector>
+    <app-chart-container-with-date-selector chartType="financeComparison"></app-chart-container-with-date-selector>
+  </div>
 </div>
