--- a/Тестовые задания/AngularTableGrafic/src/app/finance/finance.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/finance.component.html
@@ -1,1 +1,4 @@
+<div class="d-flex justify-content-around mt-4 mb-4">
+  <button class="border border-2 border-dark rounded p-2" [routerLink]="currentRouteLink">{{ buttonText }}</button>
+</div>
 <router-outlet></router-outlet>
