--- a/Тестовые задания/AngularTableGrafic/src/app/finance/analyticsCharts/analyticsCharts.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/analyticsCharts/analyticsCharts.component.html
@@ -1,7 +1,7 @@
 <div class="graficPartHTML" >
   <h1 class="d-flex justify-content-center mt-5 mb-2">Графики</h1>
   <div class="d-flex justify-content-around mb-5">
-    <app-chart-container-with-date-selector chartType="income"></app-chart-container-with-date-selector>
-    <app-chart-container-with-date-selector chartType="financeComparison"></app-chart-container-with-date-selector>
+    <app-chart-container chartType="income"></app-chart-container>
+    <app-chart-container chartType="financeComparison"></app-chart-container>
   </div>
 </div>
