--- a/Тестовые задания/AngularTableGrafic/src/app/finance/analyticsCharts/finance-comparison-chart/finance-comparison-chart.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/analyticsCharts/finance-comparison-chart/finance-comparison-chart.component.html
@@ -1,2 +1,1 @@
-<div #financeComparisonChart style="width: 600px; height: 400px;"></div>
-<div #incomeChart style="width: 600px; height: 400px;"></div> 
+<div #financeComparisonChart class="chartStyles"></div>
