--- a/Тестовые задания/AngularTableGrafic/src/styles.scss
+++ b/Тестовые задания/AngularTableGrafic/src/styles.scss
@@ -50,4 +50,13 @@ body {
     box-shadow: none !important;
   }
 
+  .chartStyles{
+    width: 600px; 
+    height: 400px;
+  }
+  .tableArea{
+    width: 100%; 
+    height: 100%;
+  }
+
 }
