--- a/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/table-area/table-area.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/table-area/table-area.component.html
@@ -1,6 +1,6 @@
-<div  style="height: 500px; width: 100%;">
+<div  class="chartStyles">
   <ag-grid-angular
-    class="ag-theme-quartz"
+    class="ag-theme-quartz tableArea"
     [gridId]="gridId"
     [columnDefs]="columnDefs"
     [defaultColDef]="defaultColDef"
@@ -8,7 +8,6 @@
     [rowSelection]="'multiple'"
     [getRowId]="getRowId"
     (gridReady)="onGridReady($event)"
-    (selectionChanged)="onSelectionChanged()"
-    style="width: 100%; height: 100%;"
+    (selectionChanged)="selectionChanged.emit($event.api.getSelectedRows())"
   ></ag-grid-angular>
 </div>
