--- a/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/table-controls/table-controls.component.html
+++ b/Тестовые задания/AngularTableGrafic/src/app/finance/financeTransactions/table-controls/table-controls.component.html
@@ -1,22 +1,11 @@
 <div class="d-flex gap-3 m-3 justify-content-center">
   <app-button-control 
-    buttonText="Добавить"
-    buttonClass="btn-success"
-    modalTarget="#addIncomeModal"
-    [modalToggle]="true"
-    (buttonClick)="onAddClick()">
-  </app-button-control>
-  <app-button-control 
-    buttonText="Редактировать"
-    buttonClass="btn-primary"
-    modalTarget="#addIncomeModal"
-    [modalToggle]="true"
-    [isDisabled]="isEditDisabled"
-    (buttonClick)="onEditClick()">
-  </app-button-control>
-  <app-button-control 
-    buttonText="Удалить"
-    buttonClass="btn-danger"
-    (buttonClick)="onDeleteClick()">
+    *ngFor="let button of buttons"
+    [buttonText]="button.buttonText"
+    [buttonClass]="button.buttonClass"
+    [modalTarget]="button.modalTarget"
+    [modalToggle]="button.modalToggle"
+    [isDisabled]="button.buttonText === 'Редактировать' ? isEditDisabled : button.isDisabled"
+    (buttonClick)="button.action()">
   </app-button-control>
 </div> 
